# Maria_Game

./: 10- cmake.cmake  3- estructura.md  CMakeLists.txt  Ejecutar_Maria_Game.cpp  README.md  build_and_run.bat  deepseek_text_20250611_0ea903.txt  main.cpp
src/: 1- Código Base.cpp
src/core/: 5- NPCs.h  6- MiracleSystem - copia.h  CombatSystem.cpp  CombatSystem.h  Game.cpp  Game.h  InventorySystem.cpp  InventorySystem.h  MiracleSystem.cpp  NPC.cpp  Player.cpp  Player.h  QuestSystem.cpp  QuestSystem.h  SaveSystem.h  ThirdPersonCamera.h
src/game/: InteractionSystem.h  PlayerAnim.h
src/levels/: 7- fatima_level.cpp  FatimaLevel.h
src/physics/: Collision.h
src/ui/: HUD.h  MessageSystem.h
src/utils/: MathHelper.h  ResourceManager.cpp  ResourceManager.h
